--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
 <div class="container">
-  <div class="main display-1 text-center"></div>
+  <div class="main text-center"></div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
