--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 <link href="https://fonts.googleapis.com/css?family=Crete+Round&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-<title>How much longer till New Horizons?</title>
+<title>How much longer till New Horizons comes and saves us?</title>
 </head>
 <body>
 
