--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body>
 
 <div class="container">
-  <div class="main text-center"></div>
+  <div class="main text-center">
+    <!-- <h1>The game's out!<br>Go play it if you have it.</h1> -->
+  </div>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
