--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="container">
   <div class="main text-center">
-    <h1>The game's out!<br>Go play it if you have it.</h1>
+ 
   </div>
 </div>
 
@@ -22,6 +22,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.min.js"></script>
-<!-- <script src="timer.js"></script> -->
+<script src="timer.js"></script>
 </body>
 </html>
