added link to madlibs

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <div class="main text-center">
  
   </div>
+  <p>If you're ready to fly to New Horizons, <a href="madlibs.html">click here</a></p>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.slim.min.js"></script>
