--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
 <link rel="stylesheet" href="style.css">
-<title>Title</title>
+<title>This is your captain speaking...</title>
 </head>
 <body>
+
+<p>Are we arriving or departing?</p>
+
+<button id="arrive" class="btn btn-primary">Arriving</button>
+<button id="depart" class="btn btn-primary">Departing</button>
 
 <h1><span id="message"></span></h1>
 
