html and css updated

--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
 <title>This is your captain speaking...</title>
 </head>
 <body>
+<div class="text-center">
 
-<p>Are we arriving or departing?</p>
+  <h1>Welcome aboard Dodo Airlines!</h1>
+
+  <h2>This is your captain Wilbur speaking.</h2>
+<p>Quick question--Are we arriving or departing?</p>
 
 <button id="arrive" class="btn btn-primary">Arriving</button>
 <button id="depart" class="btn btn-primary">Departing</button>
 
 <h1><span id="message"></span></h1>
+</div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
